fix lại các lỗi